--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>Pizza Legends</title>
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="/styles/global.css">
+        <link rel="stylesheet" href="/styles/TextMessage.css">
     </head>
     <body>
         <div class="game-container">
@@ -15,6 +16,8 @@
         <script src="/GameObject.js"></script>
         <script src="/Person.js"></script>
         <script src="/Sprite.js"></script>
+        <script src="/TextMessage.js"></script>
+        <script src="/KeyPressListener.js"></script>
         <script src="/OverworldMap.js"></script>
         <script src="/OverworldEvent.js"></script>
         
