--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Pizza Legends</title>
         <link rel="stylesheet" href="/styles/global.css">
         <link rel="stylesheet" href="/styles/TextMessage.css">
+        <link rel="stylesheet" href="/styles/SceneTransition.css">
     </head>
     <body>
         <div class="game-container">
@@ -20,6 +21,8 @@
         <script src="/KeyPressListener.js"></script>
         <script src="/OverworldMap.js"></script>
         <script src="/OverworldEvent.js"></script>
+        <script src="/RevealingText.js"></script>
+        <script src="/SceneTransition.js"></script>
         
 
         <script src="/init.js"></script>
