--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
         <link rel="stylesheet" href="/styles/global.css">
         <link rel="stylesheet" href="/styles/TextMessage.css">
         <link rel="stylesheet" href="/styles/SceneTransition.css">
+
+        <link rel="stylesheet" href="/styles/Battle.css">
+        <link rel="stylesheet" href="/styles/Combatant.css">
+        <link rel="stylesheet" href="/styles/Team.css">
+        <link rel="stylesheet" href="/styles/SubmissionMenu.css">
     </head>
     <body>
         <div class="game-container">
             <canvas class="game-canvas" width="352" height="198"></canvas>
         </div>
 
+        <script src="/Content/pizzas.js"></script>
+        
         <script src="/utils.js"></script>
         <script src="/DirectionInput.js"></script>
         <script src="/Overworld.js"></script>
@@ -23,6 +30,13 @@
         <script src="/OverworldEvent.js"></script>
         <script src="/RevealingText.js"></script>
         <script src="/SceneTransition.js"></script>
+
+        <!-- Battle -->
+
+        <script src="/Battle/Battle.js"></script>
+        <script src="/Battle/Combatant.js"></script>
+        <script src="/Battle/Team.js"></script>
+        <script src="/Battle/SubmissionMenu.js"></script>
         
 
         <script src="/init.js"></script>
