--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
 
         <script src="/Content/pizzas.js"></script>
+        <script src="/Content/actions.js"></script>
         
         <script src="/utils.js"></script>
         <script src="/DirectionInput.js"></script>
@@ -37,6 +38,9 @@
         <script src="/Battle/Combatant.js"></script>
         <script src="/Battle/Team.js"></script>
         <script src="/Battle/SubmissionMenu.js"></script>
+        <script src="/Battle/BattleEvent.js"></script>
+        <script src="/Battle/TurnCycle.js"></script>
+        <script src="/Battle/BattleAnimation.js"></script>
         
 
         <script src="/init.js"></script>
