--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="/styles/Combatant.css">
         <link rel="stylesheet" href="/styles/Team.css">
         <link rel="stylesheet" href="/styles/SubmissionMenu.css">
+        <link rel="stylesheet" href="/styles/KeyboardMenu.css">
     </head>
     <body>
         <div class="game-container">
@@ -31,6 +32,7 @@
         <script src="/OverworldEvent.js"></script>
         <script src="/RevealingText.js"></script>
         <script src="/SceneTransition.js"></script>
+        <script src="/KeyboardMenu.js"></script>
 
         <!-- Battle -->
 
